Pass the arguments correctly to QRadialGradient

The parameters for createRadialGradient indicate the position and radius
for the two circles. Therefore the radius arguments should be used with
their respective circle positions.

Task-number: QTBUG-67960
Change-Id: Ifacba4d43939bafeed451e713250f716a11d30d1
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>